# dspy_optimizations

./: .aider.conf.yml  .env.example  .gitignore  CONVENTIONS.md  DESIGN_FLAWS.md  DESIGN_FLAWS_RETRY.md  FIXES.md  GEPA_BUG.md  GEPA_OPTIMIZATION_ANALYSIS.md  README_MDAP.md  calibrate_hanoi.py  create_and_run_test_probe.py  example_hanoi.py  extract_log_digest.py  gepa_wrapper.sh  hanoi_solver.py  harness.py  mdap_harness.py  optimize_prompt.py  optimize_tool_call.py  print_prompts.py  requirements.txt  requirements_mdap.txt  run.sh  run_mdap.sh  setup.py  setup.sh  setup_mdap.sh  test_hanoi.py  test_hanoi_integration.py  test_mdap.sh  test_mdap_harness.py  test_runner.py
docs/: dspy_3_reference.md  optimized_tool_call_prompt.txt
dspy/: optimize_tool_call.py  run.sh  setup.sh
dspy_harness/: optimize_tool_call.py  run.sh  setup.sh
gepa_self_optimizer/: IMPLEMENTATION_PLAN.md  README.md  generate_data.py  gepa_config.py  gepa_system.py  glm_reflect.py  optimize_gepa.py  requirements.txt  run_gepa.sh  run_gepa_dev.sh  run_gepa_optimization.py  test_gepa.py  test_gepa.sh
lib/microagent/: __init__.py  microagent_executor.py  pyproject.toml
lib/microagent/config/: models.yaml
lib/microagent/docs/arch/: OPUS_REVIEW_20251227.md
lib/microagent/microagent/: __init__.py  litellm_harness.py  microagent.py  protocols.py
mdap/: CLAUDE.md  calibrate_hanoi.py  calibrate_hanoi.sh  (+22 more)
microagent_helloworld/: .gitignore  README.md  pyproject.toml  run.sh
microagent_helloworld/config/: model.yml
microagent_helloworld/src/microagent_helloworld/: __init__.py  agent.py  main.py
(+28 files in other folders)
